--- a/HtmlTemplate/assets/sass/_variables.scss
+++ b/HtmlTemplate/assets/sass/_variables.scss
@@ -1,4 +1,8 @@
 $body-bg: white;
+$orange: #f9b641;
+$red: #e0252f;
+$darkGrey: #3d3b3b;
+$lightGrey: #f5f5f5;
 $preloader-image-path: "/images";
 $preloader-image: "preloader";
 $preloader-fallback-extension: "gif";
