--- a/HtmlTemplate/assets/sass/_mixins.scss
+++ b/HtmlTemplate/assets/sass/_mixins.scss
@@ -8,6 +8,29 @@
     }
 }
 
+@mixin transform($transforms) {
+    -webkit-transform: $transforms;
+    -moz-transform: $transforms;
+    -ms-transform: $transforms;
+    transform: $transforms;
+}
+
+@mixin clearfix {
+    &::after {
+        content: "";
+        display: table;
+        clear: both;
+    }
+}
+
+@mixin transition($x...) {
+    -webkit-transition: $x;
+    -moz-transition: $x;
+    -ms-transition: $x;
+    -o-transition: $x;
+    transition: $x;
+}
+
 @mixin background-image($image-path, $name, $fallback-extension, $size, $retina_img: false, $dark: false) {
     background-image: url("#{$image-path}/#{$name}.#{$fallback-extension}");
 
