--- a/HtmlTemplate/assets/css/SearchResult.css
+++ b/HtmlTemplate/assets/css/SearchResult.css
@@ -1,26 +1,4 @@
-﻿.loading {
-  height: 100%;
-  position: fixed;
-  left: 0;
-  top: 0;
-  width: 100%;
-  text-align: center;
-  background-color: #000070;
-  z-index: 99;
-  display: table; }
-  .loading .spinner-border {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-left: -1em;
-    margin-top: -1em; }
-  .loading div {
-    vertical-align: middle;
-    display: table-cell; }
-    .loading div img {
-      max-width: 100%; }
-
-.innerContent .searchResult .body .tableCon .tableBody .flyItem > div:first-child .align-self-center {
+﻿.innerContent .searchResult .body .tableCon .tableBody .flyItem > div:first-child .align-self-center {
   width: auto;
   text-align: center; }
 
@@ -100,7 +78,3 @@
 .autocomplete-suggestions {
   overflow: auto !important;
   padding: 10px 0; }
-
-footer {
-  padding: 60px 0 0 0;
-  background: white; }
