--- a/HtmlTemplate/assets/css/SearchResult.css
+++ b/HtmlTemplate/assets/css/SearchResult.css
@@ -1,4 +1,7 @@
-﻿.innerContent .searchResult .body .tableCon .tableBody .flyItem > div:first-child .align-self-center {
+﻿.detailRow {
+  display: none; }
+
+.innerContent .searchResult .body .tableCon .tableBody .flyItem > div:first-child .align-self-center {
   width: auto;
   text-align: center; }
 
