--- a/HtmlTemplate/assets/sass/SearchResult.scss
+++ b/HtmlTemplate/assets/sass/SearchResult.scss
@@ -1,5 +1,9 @@
 @import "mixins";
 
+.detailRow{
+    display:none;
+}
+
 .innerContent .searchResult .body .tableCon .tableBody .flyItem > div:first-child .align-self-center {
     width: auto;
     text-align: center;
