--- a/HtmlTemplate/assets/css/layout.css
+++ b/HtmlTemplate/assets/css/layout.css
@@ -17805,3 +17805,19 @@ footer {
   font-family: sf-medium;
   font-size: 20px;
   color: #3d3b3b; }
+
+.bComplate {
+  text-align: center;
+  max-width: 750px;
+  margin: 50px auto 60px; }
+  .bComplate img {
+    margin: 0 auto 20px; }
+  .bComplate .bTitle {
+    font-family: sf-regular;
+    color: #3d3b3b;
+    font-size: 28px;
+    margin: 0; }
+  .bComplate .bText {
+    font-family: sf-regular;
+    color: #959494;
+    font-size: 20px; }
